--- a/CheckCarsDesktop/Views/ViewCrash.xaml
+++ b/CheckCarsDesktop/Views/ViewCrash.xaml
@@ -6,8 +6,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:CheckCarsDesktop.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="ViewCrash"
-    Width="800"
+    Title="Información del Choque"
+    Width="550"
     Height="450"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
@@ -129,7 +129,7 @@
                             ItemHeight="auto"
                             ItemWidth="auto">
                             <!--  Repite un control Image por cada foto  -->
-                            <ItemsControl ItemsSource="{Binding Report.Photos}">
+                            <ItemsControl ItemsSource="{Binding Photos}">
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
                                         <Image
