--- a/CheckCarsDesktop/Views/ViewIssue.xaml
+++ b/CheckCarsDesktop/Views/ViewIssue.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ViewModels="clr-namespace:CheckCarsDesktop.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:gmap="clr-namespace:GMap.NET.WindowsPresentation;assembly=GMap.NET.WindowsPresentation"
     xmlns:local="clr-namespace:CheckCarsDesktop.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Información de Problema"
@@ -80,6 +81,21 @@
                         </StackPanel>
                         <StackPanel Margin="5" />
                     </StackPanel>
+                    <StackPanel Margin="5">
+                        <gmap:GMapControl
+         Name="mapControl"
+         Width="auto"
+         Height="200"
+         HorizontalAlignment="Stretch"
+         VerticalAlignment="Stretch"
+         CanDragMap="False"
+         MapProvider="{Binding MapProvider}"
+         MaxZoom="20"
+         MinZoom="00"
+         Position="{Binding Ubication}"
+         Zoom="15" />
+                    </StackPanel>
+
                 </StackPanel>
 
                 <!--  Detalles específicos del Issue Report  -->
@@ -133,8 +149,8 @@
                                         <Image
                                             Width="auto"
                                             Height="800"
-                                            Source="{Binding FilePath}"
                                             Cursor="Hand"
+                                            Source="{Binding FilePath}"
                                             Stretch="UniformToFill">
                                             <Image.ToolTip>
                                                 <TextBlock Text="{Binding FileName}" />
