--- a/CheckCarsDesktop/Views/ViewCrash.xaml
+++ b/CheckCarsDesktop/Views/ViewCrash.xaml
@@ -8,8 +8,10 @@
     xmlns:local="clr-namespace:CheckCarsDesktop.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Información del Choque"
-    Width="550"
-    Height="550"
+    Width="600"
+    Height="700"
+    MinWidth="400"
+    MaxWidth="700"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Window.DataContext>
@@ -90,8 +92,10 @@
                             MapProvider="{Binding MapProvider}"
                             MaxZoom="20"
                             MinZoom="00"
+                            
+                            IsManipulationEnabled="False"
                             Position="{Binding Ubication}"
-                            Zoom="15" />
+                            Zoom="15" MouseWheelZoomEnabled="False" />
                     </StackPanel>
 
                 </StackPanel>
