--- a/CheckCarsDesktop/Views/ViewIssue.xaml
+++ b/CheckCarsDesktop/Views/ViewIssue.xaml
@@ -8,8 +8,10 @@
     xmlns:local="clr-namespace:CheckCarsDesktop.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Información de Problema"
-    Width="550"
-    Height="450"
+    Width="600"
+    Height="700"
+    MinWidth="400"
+    MaxWidth="700"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Window.DataContext>
@@ -83,17 +85,18 @@
                     </StackPanel>
                     <StackPanel Margin="5">
                         <gmap:GMapControl
-         Name="mapControl"
-         Width="auto"
-         Height="200"
-         HorizontalAlignment="Stretch"
-         VerticalAlignment="Stretch"
-         CanDragMap="False"
-         MapProvider="{Binding MapProvider}"
-         MaxZoom="20"
-         MinZoom="00"
-         Position="{Binding Ubication}"
-         Zoom="15" />
+                            Name="mapControl"
+                            Width="auto"
+                            Height="200"
+                            HorizontalAlignment="Stretch"
+                            VerticalAlignment="Stretch"
+                            CanDragMap="False"
+                            MapProvider="{Binding MapProvider}"
+                            MaxZoom="20"
+                            MinZoom="00"
+                            MouseWheelZoomEnabled="False"
+                            Position="{Binding Ubication}"
+                            Zoom="15" />
                     </StackPanel>
 
                 </StackPanel>
