--- a/CheckCarsDesktop/Views/ViewCrash.xaml
+++ b/CheckCarsDesktop/Views/ViewCrash.xaml
@@ -89,13 +89,13 @@
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Stretch"
                             CanDragMap="False"
+                            IsManipulationEnabled="False"
                             MapProvider="{Binding MapProvider}"
                             MaxZoom="20"
                             MinZoom="00"
-                            
-                            IsManipulationEnabled="False"
+                            MouseWheelZoomEnabled="False"
                             Position="{Binding Ubication}"
-                            Zoom="15" MouseWheelZoomEnabled="False" />
+                            Zoom="15" />
                     </StackPanel>
 
                 </StackPanel>
