--- a/CheckCarsDesktop/Views/CarList.xaml
+++ b/CheckCarsDesktop/Views/CarList.xaml
@@ -6,8 +6,9 @@
     xmlns:local="clr-namespace:CheckCarsDesktop.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="CarList"
-    Width="800"
+    Width="650"
     Height="450"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -17,6 +18,7 @@
 
         <Grid.RowDefinitions>
             <RowDefinition Height="AUTO" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
@@ -35,8 +37,9 @@
                 Foreground="White"
                 Header="Agregar" />
         </Menu>
+        <!--  Vehículos  -->
         <StackPanel Grid.Row="1" Grid.Column="0">
-            <Label FontWeight="Bold">Vehículos</Label>
+            <Label FontWeight="Bold" FontSize="15">Vehículos</Label>
             <ListView Name="MiListView" Margin="0">
                 <ListView.View>
                     <GridView>
@@ -48,16 +51,17 @@
                             Width="auto"
                             DisplayMemberBinding="{Binding Placa}"
                             Header="Placa" />
-
                     </GridView>
                 </ListView.View>
             </ListView>
         </StackPanel>
+        <!--  Detalles  -->
         <StackPanel
+            Margin="5"
             Grid.Row="1"
             Grid.Column="1"
-            Background="Red"
             Orientation="Vertical">
+            <Label FontWeight="Bold" FontSize="15">Detalles del Vehículo</Label>
             <StackPanel Margin="5" Orientation="Horizontal">
                 <TextBlock
                     Width="150"
@@ -100,7 +104,158 @@
                     Text="Tipo:" />
                 <TextBox Width="300" Text="" />
             </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Button Foreground="White" Background="Blue" Margin="5" >Actualizar</Button>
+                <Button Foreground="White" Background="red" Margin="5" >Eliminar</Button>
+            </StackPanel>
         </StackPanel>
 
+        <TabControl Grid.Row="2" Grid.Column="1">
+            <!--  Pestaña de Salidas  -->
+            <TabItem Header="Salidas">
+                <!--  Registros  -->
+                <ListView
+                    Grid.Row="1"
+                    Margin="10"
+                    ItemsSource="{Binding Entries, Mode=TwoWay}">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn
+                                Width="150"
+                                DisplayMemberBinding="{Binding Created}"
+                                Header="Fecha" />
+                            <GridViewColumn
+                                Width="130"
+                                DisplayMemberBinding="{Binding Author}"
+                                Header="Autor" />
+                            <GridViewColumn
+                                Width="90"
+                                DisplayMemberBinding="{Binding CarPlate}"
+                                Header="Placa" />
+                            <GridViewColumn Width="90" Header="Odómetro">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding mileage, StringFormat='{}{0:N0} km'}" />
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                            <GridViewColumn
+                                Width="200"
+                                DisplayMemberBinding="{Binding Notes}"
+                                Header="Motivo de Uso" />
+                            <!--  Columna para el botón  -->
+                            <GridViewColumn Width="100" Header="Acción">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button
+                                            Padding="2"
+                                            Background="Blue"
+                                            BorderBrush="Blue"
+                                            Command="{Binding DataContext.ISeeEntryReport, RelativeSource={RelativeSource AncestorType=ListView}}"
+                                            CommandParameter="{Binding ReportId}"
+                                            Content="Ver Reporte"
+                                            Foreground="White" />
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+
+            </TabItem>
+
+            <!--  Pestaña de Problemas  -->
+            <TabItem Header="Problemas">
+                <!--  Registros  -->
+                <ListView
+                    Grid.Row="1"
+                    Margin="10"
+                    ItemsSource="{Binding Issues}">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn
+                                Width="150"
+                                DisplayMemberBinding="{Binding Created}"
+                                Header="Fecha" />
+                            <GridViewColumn
+                                Width="90"
+                                DisplayMemberBinding="{Binding CarPlate}"
+                                Header="Placa" />
+                            <GridViewColumn
+                                Width="110"
+                                DisplayMemberBinding="{Binding Author}"
+                                Header="Autor" />
+                            <GridViewColumn
+                                Width="120"
+                                DisplayMemberBinding="{Binding Type}"
+                                Header="Tipo" />
+                            <GridViewColumn
+                                Width="120"
+                                DisplayMemberBinding="{Binding Priority}"
+                                Header="Prioridad" />
+                            <!--  Columna para el botón  -->
+                            <GridViewColumn Width="100" Header="Acción">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button
+                                            Padding="2"
+                                            Background="Blue"
+                                            BorderBrush="Blue"
+                                            Command="{Binding DataContext.ISeeIssueReport, RelativeSource={RelativeSource AncestorType=ListView}}"
+                                            CommandParameter="{Binding ReportId}"
+                                            Content="Ver Reporte"
+                                            Foreground="White" />
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </TabItem>
+
+            <!--  Pestaña de Accidentes  -->
+            <TabItem Header="Accidentes">
+                <!--  Registros  -->
+                <ListView
+                    Grid.Row="1"
+                    Grid.ColumnSpan="2"
+                    Margin="10,10,10,10"
+                    ItemsSource="{Binding Crashes, Mode=TwoWay}">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn
+                                Width="150"
+                                DisplayMemberBinding="{Binding Created}"
+                                Header="Fecha" />
+                            <GridViewColumn
+                                Width="150"
+                                DisplayMemberBinding="{Binding CarPlate}"
+                                Header="Placa" />
+                            <GridViewColumn
+                                Width="120"
+                                DisplayMemberBinding="{Binding Author}"
+                                Header="Autor" />
+                            <!--  Columna para el botón  -->
+                            <GridViewColumn Width="100" Header="Acción">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button
+                                            Padding="2"
+                                            Background="Blue"
+                                            BorderBrush="Blue"
+                                            Command="{Binding DataContext.ISeeCrashReport, RelativeSource={RelativeSource AncestorType=ListView}}"
+                                            CommandParameter="{Binding ReportId}"
+                                            Content="Ver Reporte"
+                                            Foreground="White" />
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                        </GridView>
+
+                    </ListView.View>
+                </ListView>
+
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
