--- a/CheckCarsDesktop/Views/CarList.xaml
+++ b/CheckCarsDesktop/Views/CarList.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:CheckCarsDesktop.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="CarList"
+    Title="Vehículos"
     Width="650"
     Height="450"
     WindowStartupLocation="CenterScreen"
