--- a/CheckCarsDesktop/Views/CarList.xaml
+++ b/CheckCarsDesktop/Views/CarList.xaml
@@ -2,14 +2,19 @@
     x:Class="CheckCarsDesktop.Views.CarList"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ViewModels="clr-namespace:CheckCarsDesktop.ViewModels"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:CheckCarsDesktop.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Vehículos"
-    Width="650"
-    Height="450"
+    Width="850"
+    Height="550"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
+    <Window.DataContext>
+        <ViewModels:CarListVM />
+    </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
@@ -38,18 +43,23 @@
                 Header="Agregar" />
         </Menu>
         <!--  Vehículos  -->
-        <StackPanel Grid.Row="1" Grid.Column="0">
-            <Label FontWeight="Bold" FontSize="15">Vehículos</Label>
-            <ListView Name="MiListView" Margin="0">
+        <StackPanel Grid.Row="1" Grid.Column="0" Grid.RowSpan="2" Width="auto"   >
+            <Label FontSize="15" FontWeight="Bold">Vehículos</Label>
+            <ListView
+                Name="MiListView"
+                Margin="0"
+                  SelectedItem="{Binding SelectedCar, Mode=TwoWay}"
+                ItemsSource="{Binding Cars.AsObservable}">
+              
                 <ListView.View>
                     <GridView>
                         <GridViewColumn
                             Width="auto"
-                            DisplayMemberBinding="{Binding Nombre}"
+                            DisplayMemberBinding="{Binding Model}"
                             Header="Vehiculo" />
                         <GridViewColumn
                             Width="auto"
-                            DisplayMemberBinding="{Binding Placa}"
+                            DisplayMemberBinding="{Binding Plate}"
                             Header="Placa" />
                     </GridView>
                 </ListView.View>
@@ -57,56 +67,66 @@
         </StackPanel>
         <!--  Detalles  -->
         <StackPanel
-            Margin="5"
             Grid.Row="1"
             Grid.Column="1"
+            Margin="5"
             Orientation="Vertical">
-            <Label FontWeight="Bold" FontSize="15">Detalles del Vehículo</Label>
+            <Label FontSize="15" FontWeight="Bold">Detalles del Vehículo</Label>
             <StackPanel Margin="5" Orientation="Horizontal">
                 <TextBlock
                     Width="150"
                     FontWeight="Bold"
                     Text="Id Vehiculo:" />
-                <TextBox Width="300" Text="" />
+                <TextBox Width="300" Text="{Binding SelectedCar.CarId}" />
             </StackPanel>
             <StackPanel Margin="5" Orientation="Horizontal">
                 <TextBlock
                     Width="150"
                     FontWeight="Bold"
                     Text="Marca:" />
-                <TextBox Width="300" Text="" />
+                <TextBox Width="300" Text="{Binding SelectedCar.Brand}" />
             </StackPanel>
             <StackPanel Margin="5" Orientation="Horizontal">
                 <TextBlock
                     Width="150"
                     FontWeight="Bold"
                     Text="Modelo:" />
-                <TextBox Width="300" Text="" />
+                <TextBox Width="300" Text="{Binding SelectedCar.Model}" />
             </StackPanel>
             <StackPanel Margin="5" Orientation="Horizontal">
                 <TextBlock
                     Width="150"
                     FontWeight="Bold"
                     Text="Placa:" />
-                <TextBox Width="300" Text="" />
+                <TextBox Width="300" Text="{Binding SelectedCar.Plate}" />
             </StackPanel>
             <StackPanel Margin="5" Orientation="Horizontal">
                 <TextBlock
                     Width="150"
                     FontWeight="Bold"
                     Text="VIN:" />
-                <TextBox Width="300" Text="" />
+                <TextBox Width="300" Text="{Binding SelectedCar.VIN}" />
             </StackPanel>
             <StackPanel Margin="5" Orientation="Horizontal">
                 <TextBlock
                     Width="150"
                     FontWeight="Bold"
                     Text="Tipo:" />
-                <TextBox Width="300" Text="" />
+                <TextBox Width="300" Text="{Binding SelectedCar.Type}" />
             </StackPanel>
             <StackPanel Orientation="Horizontal">
-                <Button Foreground="White" Background="Blue" Margin="5" >Actualizar</Button>
-                <Button Foreground="White" Background="red" Margin="5" >Eliminar</Button>
+                <Button
+                    Margin="5"
+                    Background="Blue"
+                    Foreground="White">
+                    Actualizar
+                </Button>
+                <Button
+                    Margin="5"
+                    Background="red"
+                    Foreground="White">
+                    Eliminar
+                </Button>
             </StackPanel>
         </StackPanel>
 
@@ -117,7 +137,7 @@
                 <ListView
                     Grid.Row="1"
                     Margin="10"
-                    ItemsSource="{Binding Entries, Mode=TwoWay}">
+                    ItemsSource="{Binding Entries.AsObservable}">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn
@@ -170,7 +190,7 @@
                 <ListView
                     Grid.Row="1"
                     Margin="10"
-                    ItemsSource="{Binding Issues}">
+                    ItemsSource="{Binding Issues.AsObservable}">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn
@@ -220,7 +240,7 @@
                     Grid.Row="1"
                     Grid.ColumnSpan="2"
                     Margin="10,10,10,10"
-                    ItemsSource="{Binding Crashes, Mode=TwoWay}">
+                    ItemsSource="{Binding Crashes.AsObservable}">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn
