--- a/CheckCarsDesktop/Views/CarList.xaml
+++ b/CheckCarsDesktop/Views/CarList.xaml
@@ -3,8 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ViewModels="clr-namespace:CheckCarsDesktop.ViewModels"
-    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
     xmlns:local="clr-namespace:CheckCarsDesktop.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Vehículos"
@@ -33,24 +33,25 @@
             Grid.ColumnSpan="2">
             <MenuItem
                 Padding="5,2,5,2"
-                Background="Red"
-                Foreground="White"
-                Header="Salir" />
-            <MenuItem
-                Padding="5,2,5,2"
                 Background="Green"
                 Foreground="White"
-                Header="Agregar" />
+                Header="Agregar" 
+                Command="{Binding AddCarCommand}"
+                />
         </Menu>
         <!--  Vehículos  -->
-        <StackPanel Grid.Row="1" Grid.Column="0" Grid.RowSpan="2" Width="auto"   >
+        <StackPanel
+            Grid.Row="1"
+            Grid.RowSpan="2"
+            Grid.Column="0"
+            Width="auto">
             <Label FontSize="15" FontWeight="Bold">Vehículos</Label>
             <ListView
                 Name="MiListView"
                 Margin="0"
-                  SelectedItem="{Binding SelectedCar, Mode=TwoWay}"
-                ItemsSource="{Binding Cars.AsObservable}">
-              
+                ItemsSource="{Binding Cars.AsObservable}"
+                SelectedItem="{Binding SelectedCar, Mode=TwoWay}">
+
                 <ListView.View>
                     <GridView>
                         <GridViewColumn
