--- a/CheckCarsDesktop/Views/AddCar.xaml
+++ b/CheckCarsDesktop/Views/AddCar.xaml
@@ -2,73 +2,76 @@
     x:Class="CheckCarsDesktop.Views.AddCar"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ViewModels="clr-namespace:CheckCarsDesktop.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:CheckCarsDesktop.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    WindowStartupLocation="CenterScreen"
     Title="Agregar Vehículo"
     Width="400"
     Height="550"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
-
+    <Window.DataContext>
+        <ViewModels:AddCarVM />
+    </Window.DataContext>
     <ScrollViewer>
         <Grid Margin="10">
             <StackPanel>
                 <TextBlock Text="Modelo:" />
-                <TextBox Margin="5" Text="{Binding Model}" />
+                <TextBox Margin="5" Text="{Binding Car.Model}" />
 
                 <TextBlock Text="Marca:" />
-                <TextBox Margin="5" Text="{Binding Brand}" />
+                <TextBox Margin="5" Text="{Binding Car.Brand}" />
 
                 <TextBlock Text="Tipo Vehículo:" />
-                <TextBox Margin="5" Text="{Binding Type}" />
+                <TextBox Margin="5" Text="{Binding Car.Type}" />
 
                 <TextBlock Text="Tipo Combustible:" />
-                <ComboBox Margin="5" SelectedItem="{Binding FuelType}">
+                <ComboBox Margin="5" SelectedItem="{Binding Car.FuelType}">
                     <ComboBoxItem Content="Gasoline" />
                     <ComboBoxItem Content="Diesel" />
                     <ComboBoxItem Content="Electric" />
                 </ComboBox>
 
                 <TextBlock Text="Placa:" />
-                <TextBox Margin="5" Text="{Binding Plate}" />
+                <TextBox Margin="5" Text="{Binding Car.Plate}" />
 
                 <TextBlock Text="VIN:" />
-                <TextBox Margin="5" Text="{Binding VIN}" />
+                <TextBox Margin="5" Text="{Binding Car.VIN}" />
 
                 <TextBlock Text="Año:" />
-                <TextBox Margin="5" Text="{Binding Year}" />
+                <TextBox Margin="5" Text="{Binding Car.Year}" />
 
                 <TextBlock Text="Fecha Adquisición:" />
-                <DatePicker Margin="5" SelectedDate="{Binding AdquisitionDate}" />
+                <DatePicker Margin="5" SelectedDate="{Binding Car.AdquisitionDate}" />
 
                 <TextBlock Text="Color:" />
-                <TextBox Margin="5" Text="{Binding Color}" />
+                <TextBox Margin="5" Text="{Binding Car.Color}" />
 
                 <TextBlock Text="Ancho:" />
-                <TextBox Margin="5" Text="{Binding Width}" />
+                <TextBox Margin="5" Text="{Binding Car.Width}" />
 
                 <TextBlock Text="Largo:" />
-                <TextBox Margin="5" Text="{Binding Height}" />
+                <TextBox Margin="5" Text="{Binding Car.Height}" />
 
                 <TextBlock Text="Alto:" />
-                <TextBox Margin="5" Text="{Binding Length}" />
+                <TextBox Margin="5" Text="{Binding Car.Lenght}" />
 
                 <TextBlock Text="Peso" />
-                <TextBox Margin="5" Text="{Binding Weight}" />
+                <TextBox Margin="5" Text="{Binding Car.Weight}" />
 
                 <TextBlock Text="Notas:" />
                 <TextBox
-               Height="80"
-               Margin="5"
-               Text="{Binding Notes}"
-               VerticalScrollBarVisibility="Auto" />
+                    Height="80"
+                    Margin="5"
+                    Text="{Binding Car.Notes}"
+                    VerticalScrollBarVisibility="Auto" />
 
                 <Button
-               Margin="5"
-               HorizontalAlignment="Center"
-               Command="{Binding SaveCommand}"
-               Content="Agregar Vehículo" />
+                    Margin="5"
+                    HorizontalAlignment="Center"
+                    Command="{Binding SaveCommand}"
+                    Content="Agregar Vehículo" />
             </StackPanel>
         </Grid>
     </ScrollViewer>
